src/test/deca/etapeA/invalid/lex_ident/lex_ident_17.deca

// Description:
//    test du lexeur pour les identificateurs
//    vérifie que les identificateurs sont composés de bons caractères
//
// Resultats:
// erreur syntaxique
// Ligne <9> : <syntaxError>

to:to
